--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic_Tac_Toe</title>
   </head>
-  <body></body>
+  <body>
+    <div id="container"></div>
+  </body>
   <script src="script.js"></script>
 </html>
