--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic_Tac_Toe</title>
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Tic-Tac-Toe</h1>
+
+    <div class="button-container">
+      <button id="chooseX">Choose X</button>
+      <button id="chooseO">Choose O</button>
+    </div>
+
     <div id="container"></div>
+
+    <div id="restart">
+      <button>Restart Game</button>
+    </div>
+
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
