when i click the start button, it show's me a popup to enter name, and the symbol to play and i can cancel whether by clicking the x button or anywhere in the page

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <h1>Tic-Tac-Toe</h1>
 
-    <div class="button-container">
+    <!-- <div class="button-container">
       <button id="chooseX">Choose X</button>
       <button id="chooseO">Choose O</button>
-    </div>
+    </div> -->
 
     <div id="container"></div>
 
-    <div id="restart">
-      <button>Restart Game</button>
+    <div id="start">
+      <button id="startBtn">Get Started</button>
     </div>
 
     <script src="script.js"></script>
