Add Functionality of display players score. the ability to use a table to display the players score with their name

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <div id="start">
       <button id="startBtn">Get Started</button>
     </div>
-    <!-- <div class="button-container">
-      <button id="chooseX">Choose X</button>
-      <button id="chooseO">Choose O</button>
-    </div> -->
 
     <div id="container"></div>
 
+    <button id="showScoresBtn">Show Scores</button>
+    <div id="scoresMenu" class="scores-menu">
+      <button id="closeScoresBtn" class="closes-btn">&times;</button>
+      <h2>Scores</h2>
+      <div id="scoresList"></div>
+    </div>
+
     <script src="script.js"></script>
+    <script src="scores.js"></script>
   </body>
 </html>
